# transformers

./: .gitattributes  .gitmodules  README.md  build_dependencies.bat  build_dependencies.ps1  env.yaml
.github/workflows/: ci.yml  ci_dsv.yml
ci/: setup.bat  setup.ps1
cmake/: FindDynamicDispatch.cmake  RyzenAIConfig.cmake
models/BERT/: README.md  model_utils.py  run.py
models/llm/: model_prof.bat  model_prof.ps1  modeling_llama_add_prof.py  modeling_qwen2_prof.py  run_awq.py  summary_prof.py  test.json
models/llm_assisted_generation/: README.md  assisted_generation.py  codeLlama2-7b.md  llama2-7b.md  opt.md  qwen1.5-7B-Chat.md
models/llm_onnx/: env.yaml  test.json  vaip_config_transformers_cxx.json
models/llm_speculative_decoding/: README.md  batched_exec_humaneval.sh  china_ai_demo.py  decoding.py  decoding_with_time_record.py  evaluate_humaneval.py  evaluate_humaneval.sh  pip.conf  run_rocm_docker.sh
models/rag/: README.md  ryzenai_rag.py
models/stable_diffusion_amd/: .gitignore  README.md  setup_phx.bat  setup_stx.bat  vaip_config_phx.json  vaip_config_stx.json
models/vision_transformer/: README.md  run.py
ops/cpp/: CMakeLists.txt  setup.py
ops/python/: llama_fast_attention.py  llama_fast_decoder.py  llama_fast_mlp_npu.py  llama_fast_rmsnorm.py  llm_fast_decoder.py  phi_flash_attention.py  qlinear.py  ryzenai_attention.py
ops/torch_cpp/: CMakeLists.txt  (+3 more)
ops/torch_cpp/gpu/: CMakeLists.txt  context.cpp  context.h  opInterface.cpp  opInterface.h  operator.cpp  operator.h  tensor.cpp  tensor.h  types.cpp  types.h
ops/torch_cpp/gpu/operators/: conv.cpp  conv.h  convInt.cpp  convInt.h  gemm.cpp  gemm.h  matMulInt.cpp  matMulInt.h  matMulNBits.cpp  matMulNBits.h  multHeadAttn.cpp  multHeadAttn.h  norm.cpp  norm.h
tests/: suite.json
tools/: llm_eval.py  ryzenai_llm_engine.py  ryzenai_llm_quantizer.py
(+150 files in other folders)
